# colortools

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cli.py  colorsort.py  pyproject.toml  requirements.txt  setup.cfg
colorsort/: analysis.py  analyzed_image.py  cli.py  colorsort_cli.py  config.py  cs_image_representation.py  heuristics.py  image.py  image_utils.py  sort.py  util.py  visualization.py
colortools/: __main__.py  analysis.py  analyzed_image.py  cli.py  config.py  heuristics.py  sort.py  util.py  visualization.py
docs/: colortools-tutorial.md  references.md  update-notes.md  uploading-to-pypi.md
tests/: conftest.py  test_analysis.py  test_analyzed_image.py  test_heuristics.py  test_sort.py  test_util.py
