[metadata]
name = ColorTools
version = 1.0.0

[options]
packages = colortools
python_requires = >=3.8
install_requires =
    black
    coverage
    flake8
    pillow >=9.1.1
    pre-commit
    pytest >=.1.2
    scikit-learn >= 1.1.1
    tqdm

[options.entry_points]
console_scripts =
    colortools = colortools.cli:main
