[metadata]
name = nbp-colortools
version = attr: colortools.__version__
author = Nick Becker
author_email = nbeckerphoto@gmail.com
description = A collection of tools for analyzing and arranging images by color.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nbeckerphoto/colortools
keywords =
  color analysis
  image analysis
  photography
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Environment :: Console
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Software Development :: Libraries
license_files =
  LICENSE

[options]
packages = colortools
python_requires = >=3.8
install_requires =
    pillow >=9.1.1
    scikit-learn >= 1.1.1
    numpy >= 1.23.1
    tqdm

[options.entry_points]
console_scripts =
    colortools = colortools.cli:main
    nbp-colortools = colortools.cli:main
